# pyide

./: .env.lan.example  .eslintrc.cjs  .gitignore  DATAHUB_AI_CHAT_GUIDE.md  DATAHUB_MCP_SETUP.md  DATAHUB_QUICKSTART.md  DOCKER_INSTALL_GUIDE.md  Dockerfile  KERNEL_AND_MARKDOWN_FIXES.md  LAN_DEPLOYMENT_SUMMARY.md  LOCAL_TEST_CHECKLIST.md  MCP_AI_CHAT_ARCHITECTURE.md  MCP_AI_CHAT_FIX_COMPLETED.md  MCP_LOADING_FIX.md  MCP_TOOLS_DISCOVERY_FIX.md  PHASE2_COMPLETE.md  PHASE2_COMPLETE_FINAL.md  PHASE2_FINAL_SUMMARY.md  PHASE2_PROGRESS.md  PHASE3_REPORT.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  TESTING_QUICK_REF.md  create_config.py  create_mcp_config.ps1  deploy-lan.sh  deploy-to-server.ps1  docker-compose.lan.yml  docker-compose.test.yml  docker-compose.yml  mcp_config.json  package-lock.json  package.json  pytest.ini  pytest_result.txt  test-local.ps1  test_datahub_mcp.py  test_mcp_chat_integration.py  test_mcp_simple.py  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: auth.rs  fs_commands.rs  kernel.rs  lib.rs  main.rs  mcp.rs  memory.rs  skills.rs  uv.rs
docs/: 01-overview.md  02-kernel.md  03-ai-chat-skill-mcp.md  04-memory-system.md  05-frontend-ui.md  06-multi-user-publishing.md  07-development-roadmap.md  AUTHENTICATION_CONFIGURATION.md  CONSOLE_AND_REMOTE_FIXES_REPORT.md  LAN_DEPLOYMENT_GUIDE.md  QUICK_TEST_ACCOUNT.md  README.md  REMOTE_KERNEL_CONFIGURATION.md  SERVER_ACCOUNT_MANAGEMENT.md  SERVER_DEPLOYMENT_GUIDE.md  TESTING.md  TROUBLESHOOTING_FILETREE_FREEZE.md  TROUBLESHOOTING_KERNEL_SPAWN.md
test/: README.md
(+345 files in other folders)
