[package]
name = "pyide"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rfd = "0.14"
dirs = "5"
lazy_static = "1.4"
